controller/test/e2e/features/agentgateway/jwtauth/testdata/secured-route-with-rbac.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "secureroute.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
# jwks were generated using hack/utils/jwt/jwt-generator.go
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: route-policy
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: route-secure
  traffic:
    authorization:
      action: Allow
      policy:
        matchExpressions:
          - 'jwt.sub == "ignore@agentgateway.dev"'
    jwtAuthentication:
      mode: Strict
      providers:
      - issuer: https://agentgateway.dev
        jwks:
          inline: '{"keys":[{"use":"sig","kty":"RSA","kid":"7073024352919329094","n":"mDGi5mfwowUijU5cfoBC7DgjHi3Q_HITTiBQk0oCyIJY63GSdneLRYLL3tc3ae8_Uz0mIeTIY0QumsC0JYVnf28yYGFbaJRaiy3NqwdGz3Eecz8eOXWe6tnx-ZxaO4hOCguSQhmdUvc1VSL5pXohQd4UESpI6DgApuTIix9u0gqBIYbanKaa-KFPex_AaPFO0YrnVa6W6eFZXCQH-rKl7jmHa94iD-hwuuGJynPU9cjLJzSofNZUJvA1sCWDH6c8hk_caA4o0C6GFr-zGCmXfq9S_5IlUsKNMxjlFFE64gWutK_l5zGwd9X5Pd42eTmEWHY3bR6jXM3L7FAI0FUw1Q","e":"AQAB","x5c":["MIIC5jCCAc6gAwIBAgIBRzANBgkqhkiG9w0BAQsFADAbMRkwFwY [...]
